# MSDF-Kit

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.ps1  package-lock.json  package.json  release.ps1  tsconfig.json  tsconfig.test.json  vitest.config.ts
.github/workflows/: ci.yml  release.yml
scripts/: download-test-font.ps1  download-test-fonts.ps1
shader/: msdf.glsl
src/: svg_shape.cpp  svg_shape.h  wrapper.cpp
test/: test-font.ts  test-icon.ts  test-packer.ts  test-wasm.ts
test/helpers/: load-wasm.ts
typescript/: atlas-packer.ts  index.ts  types.ts  wasm-loader.ts
